@startuml


abstract class Obstaculo {
    + {abstract} penalizar(Vehiculo): void
}


class Pozos {
    + penalizar(Vehiculo): void
}



class Piquete {
    + penalizar(Vehiculo): void
}



class ControlPolicial {
    + penalizar(Vehiculo): void
}


Obstaculo <|-- Pozos
Obstaculo <|-- Piquete
Obstaculo <|-- ControlPolicial

@enduml
